--- a/src/main/resources/templates/edit-movie-page.html
+++ b/src/main/resources/templates/edit-movie-page.html
@@ -152,10 +152,10 @@
                     </div>
 
                     <div class="text-center">
-                        <button type="submit" class="empty-button btn btn-outline-warning">
+                        <button type="submit" class="empty-button btn btn-default">
                             Edit
                         </button>
-                        <button type="reset" class="empty-button btn btn-outline-warning">
+                        <button type="reset" class="empty-button btn btn-default">
                             Reset
                         </button>
                     </div>
