--- a/src/main/resources/templates/employee.html
+++ b/src/main/resources/templates/employee.html
@@ -32,19 +32,19 @@
     <div class="col-md-12 employee_btn">
         <div class="row">
             <div class="col-md-6 text-center">
-                <a href="/add-movie-page" style="border-radius: 5px;" class="btn btn-outline-warning  see-movies">Add movie</a>
+                <a href="/add-movie-page" style="border-radius: 5px;" class="btn btn-default  see-movies">Add movie</a>
             </div>
             <div class="col-md-6 text-center">
-                <a href="/plan-movie-page" style="border-radius: 5px;" class="btn btn-outline-warning  see-movies">Plan movie</a>
+                <a href="/plan-movie-page" style="border-radius: 5px;" class="btn btn-default  see-movies">Plan movie</a>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-6 text-center">
-                <a href="/movies" style="border-radius: 5px;" class="btn btn-outline-warning  see-movies">See all movie</a>
+                <a href="/movies" style="border-radius: 5px;" class="btn btn-default  see-movies">See all movie</a>
             </div>
             <div class="col-md-6 text-center">
-                <a href="/plan-movie-page" style="border-radius: 5px;" class="btn btn-outline-warning  see-movies">Delete movie</a>
+                <a href="/plan-movie-page" style="border-radius: 5px;" class="btn btn-default  see-movies">Delete movie</a>
             </div>
         </div>
 
