--- a/src/main/resources/templates/plan-movie-page.html
+++ b/src/main/resources/templates/plan-movie-page.html
@@ -111,7 +111,7 @@
                 </form>
 
                 <div class="text-center text-md-left">
-                    <button class="see-movies btn btn-outline-warning">
+                    <button class="see-movies btn btn-default">
                         <a onclick="document.getElementById('contact-form').submit();">Save</a>
                     </button>
                 </div>
