--- a/src/main/resources/templates/add-movie-page.html
+++ b/src/main/resources/templates/add-movie-page.html
@@ -124,13 +124,15 @@
                         <!--Grid column-->
                         <div class="col-md-6" style="margin-bottom: 2%">
                             <!--<label for="checkbox">3D:</label>-->
-                            <h6>3D:</h6>
+                            <div class="md-form mb-0">
+                                <h6>3D:</h6>
 
-                            <label class="switch" for="enabled">
-                                <!--<input th:="${movieForm.type}" type="checkbox">-->
-                                <input type="checkbox" id="enabled" name="a" value="3D" class="form-control mb-4 switch">
-                                <span class="slider round"></span>
-                            </label>
+                                <label class="switch" for="enabled">
+                                    <!--<input th:="${movieForm.type}" type="checkbox">-->
+                                    <input type="checkbox" id="enabled" name="a" value="3D" class="form-control mb-4 switch">
+                                    <span class="slider round"></span>
+                                </label>
+                            </div>
                         </div>
                         <!--Grid column-->
                     </div>
@@ -147,7 +149,7 @@
                     </div>
 
                     <div class="text-center">
-                        <button type="submit" class="empty-button btn btn-outline-warning">
+                        <button type="submit" class="empty-button btn btn-default">
                             Save
                         </button>
                     </div>
