--- a/src/main/resources/templates/add-movie-page2.html
+++ b/src/main/resources/templates/add-movie-page2.html
@@ -66,7 +66,7 @@
 
 
                     <div class="text-center">
-                        <button type="submit" class="empty-button btn btn-outline-warning">
+                        <button type="submit" class="empty-button btn btn-default">
                             Save
                         </button>
                     </div>
