--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -95,7 +95,7 @@
                 </form>
 
                 <div class="text-center text-md-left">
-                    <button class="empty-button btn btn-outline-warning">
+                    <button class="empty-button btn btn-default">
                     <a onclick="document.getElementById('contact-form').submit();">Send</a>
                     </button>
                 </div>
