--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -31,7 +31,7 @@
         <section class="mb-4">
 
             <!--Section heading-->
-            <h2 class="h1-responsive font-weight-bold text-center my-4">See movies</h2>
+            <h2 class="h1-responsive font-weight-bold text-center my-4">See users</h2>
             <div class="row contact_form">
 
                 <!--Grid column-->
@@ -39,25 +39,26 @@
                     <table class="table table-hover">
                         <thead>
                         <tr>
-                            <th scope="col">Username</th>
-                            <th scope="col">Role</th>
-                            <th scope="col">Enabled</th>
-                            <th scope="col">Password</th>
-                            <th scope="col">
+                            <th class="col-name" scope="col">Username</th>
+                            <th class="col-name" scope="col">Role</th>
+                            <th class="col-name" scope="col">Enabled</th>
+                            <th class="col-name" scope="col">Password</th>
+                            <th class="col-name" scope="col" colspan="2">
                                 <!-- Button edit -->
-                                <a th:href="'/add-user/'" class="btn btn-success add">Add</a>
+                                <a th:href="'/add-user/'" class="btn empty-button add">Add User</a>
                             </th>
+                            <th class="col-name"></th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr th:each="user: ${users}">
-                            <td th:text="${user.username}"></td>
-                            <td th:text="${user.role}"></td>
-                            <td th:text="${user.enabled} ? 'Yes' : 'No'"></td>
-                            <td><a th:href="'/edit-user-password/' + ${user.user_id}">Reset password</a></td>
-                            <td>
+                            <td class="col-name" th:text="${user.username}"></td>
+                            <td class="col-name" th:text="${user.role}"></td>
+                            <td class="col-name" th:text="${user.enabled} ? 'Yes' : 'No'"></td>
+                            <td class="col-name"><a th:href="'/edit-user-password/' + ${user.user_id}">Reset password</a></td>
+                            <td class="col-name">
                                 <!-- Button edit -->
-                                <a th:href="'/edit-user/' + ${user.user_id}" class="btn btn-primary edit-delete">Edit</a>
+                                <a th:href="'/edit-user/' + ${user.user_id}" class="btn empty-button">Edit</a>
                                 <!-- Button delete -->
                                 <a th:href="'/delete-user/' + ${user.user_id}" class="btn btn-danger edit-delete">Delete</a>
                             </td>
