Find/Delete Booking by Customer, Favicon, Send Sms

--- a/src/main/resources/templates/booking-confirmation.html
+++ b/src/main/resources/templates/booking-confirmation.html
@@ -27,7 +27,7 @@
 Your booking has been successfully made !
 <br>
 
-Movie: <span th:text="${booking.moviePlan.movie.type} ? ${booking.moviePlan.movie.movieDetails.name} + ' : 3D' : ${booking.moviePlan.movie.movieDetails.name} + ' : 2D'">Movie</span><br>
+Movie: <span th:text="${booking.moviePlan.movie.type} ? ${booking.moviePlan.movie.movieDetails.name} + ' - 3D' : ${booking.moviePlan.movie.movieDetails.name} + ' - 2D'">Movie</span><br>
 Date & Time: <span th:text="${booking.moviePlan.date_time}">Date & Time</span><br>
 Theater Room: <span th:text="${booking.moviePlan.theaterRoom.name}">Theater Room</span><br>
 Seat(s):
