--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/contact}"><i class="fas fa-envelope"></i> Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/find-booking}"><i class="fas fa-ticket-alt"></i> Booking</a>
+                    </li>
                 </ul>
 
                 <form th:action="@{/search-movie-post}" method="post">
